log
Fri 23 Sep 2022 11:39:38 AM UTC: 
 tests:  1|8
total_score: 0/70
798176d
Fri 23 Sep 2022 11:52:03 AM UTC: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
test.c: In function ‘createTreeMap’:
treemap.c:42:16: error: ‘newMap’ is used uninitialized in this function [-Werror=uninitialized]
   42 |   newMap->root = NULL;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
ce9eb06
Fri 23 Sep 2022 11:52:48 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:8: error: ‘lower_than’ redeclared as different kind of symbol
   42 |   int(*lower_than) (void* key1, void* key2);
      |        ^~~~~~~~~~
treemap.c:39:31: note: previous definition of ‘lower_than’ was here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |                         ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:42:8: error: unused variable ‘lower_than’ [-Werror=unused-variable]
   42 |   int(*lower_than) (void* key1, void* key2);
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3bba3da
Fri 23 Sep 2022 11:53:09 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:18: error: expected expression before ‘void’
   42 |   (*lower_than) (void* key1, void* key2);
      |                  ^~~~
treemap.c:42:4: error: too few arguments to function ‘lower_than’
   42 |   (*lower_than) (void* key1, void* key2);
      |   ~^~~~~~~~~~~~
Compilation failed
fbfe8ae
Fri 23 Sep 2022 11:53:24 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:18: error: ‘key1’ undeclared (first use in this function)
   42 |   (*lower_than) (key1, key2);
      |                  ^~~~
treemap.c:42:18: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:24: error: ‘key2’ undeclared (first use in this function)
   42 |   (*lower_than) (key1, key2);
      |                        ^~~~
Compilation failed
9a6cb1b
